--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,116 @@
+apturl==0.5.2
+asn1crypto==0.22.0
 bleach==1.5.0
+Brlapi==0.6.5
+certifi==2017.4.17
+chardet==3.0.4
+click==6.7
+click-plugins==1.0.3
+cligj==0.4.0
+command-not-found==0.3
+cryptography==1.9
+cupshelpers==1.0
+cycler==0.10.0
+Cython==0.25.2
+decorator==4.1.2
+defer==1.0.6
+descartes==1.1.0
+distro-info==0.17
+entrypoints==0.2.3
+Fiona==1.7.10.post1
+geojson==2.3.0
+geopandas==0.3.0
+h5py==2.7.1
 html5lib==0.9999999
+httplib2==0.9.2
+idna==2.5
+ipykernel==4.6.1
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.0.4
+jedi==0.11.0
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.1.0
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+Keras==2.0.9
+keyring==10.4.0
+keyrings.alt==2.2
+language-selector==0.1
+launchpadlib==1.10.5
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+louis==3.0.0
+Mako==1.0.7
 Markdown==2.6.9
+MarkupSafe==1.0
+matplotlib==2.0.0
+mistune==0.8.1
+munch==2.2.0
+nbconvert==5.3.1
+nbformat==4.4.0
+networkx==1.11
+nose==1.3.7
+notebook==5.2.1
 numpy==1.13.3
+oauth==1.0.1
+olefile==0.44
 overpy==0.4
+pandas==0.21.0
+pandocfilters==1.4.2
+parso==0.1.0
+pexpect==4.2.1
+pickleshare==0.7.4
+Pillow==4.1.1
 pkg-resources==0.0.0
+prompt-toolkit==1.0.15
 protobuf==3.4.0
+ptyprocess==0.5.2
+pycocotools==2.0
+pycrypto==2.6.1
+pycups==1.9.73
+Pygments==2.2.0
+pygobject==3.24.1
+pyparsing==2.1.10
+pyproj==1.9.5.1
+python-apt==1.4.0b3
+python-dateutil==2.6.1
+python-debian==0.1.30
+pytz==2017.2
+PyWavelets==0.5.1
+pyxdg==0.25
+PyYAML==3.12
+pyzmq==16.0.3
+qtconsole==4.3.1
+reportlab==3.4.0
+requests==2.18.1
+scikit-image==0.13.0
+scipy==0.18.1
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
 Shapely==1.6.2.post1
+simplegeneric==0.8.1
+simplejson==3.11.1
 six==1.11.0
+system-service==0.3
+systemd-python==234
 tensorflow-gpu==1.3.0
 tensorflow-tensorboard==0.1.8
+terminado==0.6
+testpath==0.3.1
+tornado==4.5.2
+traitlets==4.3.2
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.21.1
+usb-creator==0.3.3
+virtualenv==15.1.0
+wadllib==1.3.2
+wcwidth==0.1.7
 Werkzeug==0.12.2
+widgetsnbextension==3.0.7
+xkit==0.0.0
+zope.interface==4.3.2
